Background grandient & fix z-index

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -25,6 +25,7 @@ body {
   line-height: 1;
   text-transform: lowercase;
   padding-top: 10px;
+  z-index: 1;
 }
 
 .footer {
