--- a/src/styles/_lottery.scss
+++ b/src/styles/_lottery.scss
@@ -9,6 +9,11 @@
     align-items: center;
     justify-content: center;
     overflow-x: hidden;
+    background: radial-gradient(
+      ellipse at center,
+      rgba(lighten($gray900, 25%), 0.25) 0%,
+      rgba(darken($black, 12.5%), 0.25) 100%
+    );
   }
 
   &__container {
@@ -16,6 +21,7 @@
     text-align: center;
     height: 300px;
     width: 100%;
+    z-index: 2;
   }
 
   &__card {
@@ -90,7 +96,7 @@
       animation-play-state: paused, running;
       animation-fill-mode: backwards, forwards;
       animation-delay: 0s, 0.2s;
-      z-index: 1;
+      z-index: 3;
 
       .lottery__card-back,
       .lottery__card-front {
